Remoção de documentação não utilizada, correções de lógica em métodos e testes, e ajustes em imports e formatação.